# ckanext-digitizationknowledge

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/digitizationknowledge/: cli.py  helpers.py  plugin.py  views.py
ckanext/digitizationknowledge/assets/: script.js  webassets.yml
ckanext/digitizationknowledge/logic/: action.py  auth.py  schema.py  validators.py
ckanext/digitizationknowledge/public/: fritz-jose_idigbio-portrait.jpg:Zone.Identifier
ckanext/digitizationknowledge/schemas/: book.yaml  digital-document.yaml  digitaldocument.yaml  digitization-resource.yaml  event.yaml  journal-article.yaml  learning-resource.yaml  presets.yaml  publication-general.yaml  resource-hub.yaml  scholarly-article.yaml  software-application.yaml  software-source-code.yaml  video-object.yaml  web-content.yaml  web-resource.yaml
ckanext/digitizationknowledge/schemas/groups/: group.json  groups.json
ckanext/digitizationknowledge/schemas/organizations/: organization.json  organizations.json
ckanext/digitizationknowledge/templates/: footer.html  header.html
ckanext/digitizationknowledge/templates/digitizationknowledge/: privacy_policy.html  terms_of_use.html
ckanext/digitizationknowledge/templates/group/: read_base.html
ckanext/digitizationknowledge/templates/home/: about.html  index.html
ckanext/digitizationknowledge/templates/organization/: read.html  read_base.html
ckanext/digitizationknowledge/tests/: test_helpers.py  test_plugin.py  test_views.py
config/: schema.xml
(+28 files in other folders)
